Fix svg bug on firefox

--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -1,4 +1,4 @@
 .icon {
-  min-width: 100px;
+  max-width: 100px;
   height: auto;
 }
